# log-sender

./: Cargo.toml  E2E.md  LOG_SENDER_USER_GUIDE.md  Makefile  README.md
.github/workflows/: ci.yml  rust.yml  test.yml
examples/: test-writer.rs
src/: client.rs  config.rs  crypto.rs  db_size.rs  lib.rs  reader.rs  test.rs
