[package]
name = "log-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
fs2 = "0.4.3"
rand = "0.8"
reqwest = { version = "0.12.23", features = ["json"] }
rsa = { version = "0.9.8", features = ["sha2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.22.0"
