[package]
name = "log-sender"
version = "0.1.2"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive", "env", "wrap_help"] }
fs2 = "0.4.3"
rand = "0.8"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "native-tls-vendored"] }
rsa = { version = "0.9.8", features = ["sha2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.22.0"
tracing-appender = "0.2.3"
